--- a/src/main/resources/templates/thymeleaf/fo/community/community_event.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_event.html
@@ -99,18 +99,18 @@
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
     <div id="container">
         <div class="community_wrap">
-            <!-- <div id="nav">
+            <div id="nav">
                 <ul>
                     <li><a href="/community/main">홈</a></li>
                     <li><a href="/community/worksList">작품자랑</a></li>
                     <li><a href="/community/exhintList">전시후기&소개</a></li>
                     <li><a href="/community/issueList">이슈</a></li>
                     <li><a href="/community/event" class="over">이벤트</a></li>
-                    <li class="pt0 mt10"><button class="btn_recording">기록하기</button></li>
+                    <li class="pt0 mt10"><button class="btn_recording" onclick="location.href='/temp/mypage_main'">기록하기</button></li>
                 </ul>
-            </div> -->
+            </div>
             <!-- mobile html 시작 -->
-            <div id="nav">
+            <!-- <div id="nav">
                 <ul>
                     <li><a href="/community/main">홈</a></li>
                     <li><a href="/community/worksList">작품자랑</a></li>
@@ -118,8 +118,8 @@
                     <li><a href="/community/knowhowList">노하우</a></li>
                     <li><a href="/community/event" class="over">이벤트</a></li>
                 </ul>
-            </div>
-            <button class="btn_recording">기록하기</button>
+            </div> -->
+            <!-- <button class="btn_recording">기록하기</button> -->
             <!-- mobile html 끝 -->
             <div class="sel_wrap">
                 <div class="sel_sortation right0">
