--- a/src/main/resources/templates/thymeleaf/fo/community/community_home.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home.html
@@ -99,18 +99,18 @@
     <th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
     <div id="container">
         <div class="community_wrap">
-            <!-- <div id="nav">
+            <div id="nav">
                 <ul>
                     <li><a href="/community/main" class="over">홈</a></li>
                     <li><a href="/community/worksList">작품자랑</a></li>
                     <li><a href="/community/exhintList">전시후기&소개</a></li>
                     <li><a href="/community/issueList">이슈</a></li>
                     <li><a href="/community/event">이벤트</a></li>
-                    <li class="pt0 mt10"><button class="btn_recording">기록하기</button></li>
+                    <li class="pt0 mt10"><button class="btn_recording" onclick="location.href='/temp/mypage_main'">기록하기</button></li>
                 </ul>
-            </div> -->
+            </div>
             <!-- mobile html 시작 -->
-            <div id="nav">
+            <!-- <div id="nav">
                 <ul>
                     <li><a href="/community/main" class="over">홈</a></li>
                     <li><a href="/community/worksList">작품자랑</a></li>
@@ -119,7 +119,7 @@
                     <li><a href="/community/event">이벤트</a></li>
                 </ul>
             </div>
-            <button class="btn_recording">기록하기</button>
+            <button class="btn_recording">기록하기</button> -->
             <!-- mobile html 끝 -->
             <div class="community_visual_wrap">
                 <div class="community_visual"><a href="https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet"><img src="/resources/img/img_new/community_visual.jpg" alt=""></a></div>
@@ -136,7 +136,7 @@
                     <button class="btn_more" onclick="btnMore('BOA');">더보기</button>
                 </div>
                 <ul>
-                    <li>
+                    <!-- <li>
                       <a href="#"><img src="/resources/img/img_new/sample_works01.jpg" alt=""></a>
                       <p>희망을 주는 그림</p>
                     </li>
@@ -151,11 +151,11 @@
                     <li>
                       <a href="#"><img src="/resources/img/img_new/sample_works04.jpg" alt=""></a>
                       <p>희망을 주는 그림</p>
-                    </li> 
+                    </li>  -->
                   </ul>
             </div>
             <!-- mobile html 시작 -->
-            <div class="works_wrap">
+            <!-- <div class="works_wrap">
                 <div class="tit_wrap">
                     <h2>이주의 인기 작품자랑</h2>
                     <button class="btn_more" onclick="btnMore('BOA');">더보기</button>
@@ -178,15 +178,15 @@
                 		<div class="text">희망을 주는 그림</div>
                 	</div>
                 </div>                  
-            </div>
+            </div> -->
             <!-- mobile html 끝 -->
-            <!-- <div class="master_wrap">
+            <div class="master_wrap">
                 <div class="tit_wrap">
                     <h2>자랑하기의 고수</h2>
                     <button class="btn_more" onclick="btnMore('BOA');">더보기</button>
                 </div>
                 <ul>
-                    <li>
+                    <!-- <li>
                       <a href="#"><img src="/resources/img/img_new/sample_master01.jpg" alt=""></a>
                       <p>전시를 다녀 왔어요</p>
                     </li>
@@ -201,11 +201,11 @@
                     <li>
                       <a href="#"><img src="/resources/img/img_new/sample_master04.jpg" alt=""></a>
                       <p>전시를 다녀 왔어요</p>
-                    </li>
+                    </li> -->
                   </ul>
-            </div> -->
+            </div>
             <!-- mobile html 시작 -->
-            <div class="master_wrap">
+            <!-- <div class="master_wrap">
                 <div class="tit_wrap">
                     <h2>자랑하기의 고수</h2>
                     <button class="btn_more" onclick="btnMore('BOA');">더보기</button>
@@ -228,7 +228,7 @@
                 		<div class="text">희망을 주는 그림</div>
                 	</div>
                 </div>
-            </div>
+            </div> -->
             <!-- mobile html 끝 -->            
             <div class="posts_warp">
                 <div class="intro_posts">
@@ -312,7 +312,8 @@
 			var html = "";
 			$.each(list, function(idx, item) {
 				html += "<li>";
-				html += "	<a href='javascript:void(0);' data-mbrSq="+ item.mbrSq +" data-comtSq="+ item.comtSq +" data-artstSq="+ item.artstSq +" data-workSq="+ item.workSq +" onclick='openComtDetail(this, \"BOA\");'>";
+				//html += "	<a href='javascript:void(0);' data-mbrSq="+ item.mbrSq +" data-comtSq="+ item.comtSq +" data-artstSq="+ item.artstSq +" data-workSq="+ item.workSq +" onclick='openComtDetail(this, \"BOA\");'>";
+				html += "	<a href='/community/showingOffDetail?comtSq="+ item.comtSq +"'>";
 				html += "		<img src="+ item.comtImgUrl +" alt='' style='width: 360px; height: 360px; object-fit: contain;'>";
 				html += "	</a>";
 				html += "	<p style='width: 360px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden;'>"+ item.comtTitle +"</p>";
@@ -326,7 +327,11 @@
 			var html = "";
 			$.each(list, function(idx, item) {
 				html += "<li>";
-				html += "	<a href='javascript:void(0);' data-mbrSq="+ item.mbrSq +" data-comtsq="+ item.comtSq +" data-artstsq="+ item.artstSq +" data-worksq="+ item.workSq +" onclick='openComtDetail(this, \""+ type +"\");'>";
+				if(type == "EXH") {
+					html += "	<a href='/community/exhibitDetail?comtSq="+ item.comtSq +"'>";
+				} else {
+					html += "	<a href='/community/knowhowDetail?comtSq="+ item.comtSq +"'>";
+				}
 				html += "		<span style='width: 450px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden; margin-right: 10px;'>"+ (idx+1) +"</span>" + item.comtTitle;
 				html += "		<span style='float: right;'>"+ item.regDt +"</span>";
 				if(item.comtCmts) {
@@ -339,7 +344,7 @@
 		}
     	
     	// 커뮤니티 상세 페이지 이동
-    	function openComtDetail(obj, type) {
+    	/* function openComtDetail(obj, type) {
     		var url = "";
     		
     		switch(type) {
@@ -354,6 +359,8 @@
     			break;
     		}
     		
+    		location.href=""
+    		
     		pageGoPost({
 				url: url,
 				target:"_self",
@@ -365,7 +372,7 @@
 					["comtTypCd", type]
 				]
 			});
-    	}
+    	} */
     	
     	// 더보기 클릭 이벤트
     	function btnMore(type) {
