--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -1,10 +1,9 @@
-<html lagn="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	
-<div th:fragment="footerFragment">
-
 <!DOCTYPE HTML>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	
+<th:block th:fragment="footerFragment">
 <head>
+</head>
 <body>
 	<div class="footer-wrap">
 			<div class="footer-box">
@@ -74,10 +73,6 @@
 				</div>
 			</div>
 		</div>
-		
-	</div>
-</body>
-</html>
 <!-- LEFT MENU ACTIVE -->
 <script>
 $(function () {
@@ -91,5 +86,8 @@ $(function () {
 		});
 });
 </script>
+</body>
+</th:block>
 
-</div>
+</html>
+
