--- a/src/main/resources/static/css/common_new.css
+++ b/src/main/resources/static/css/common_new.css
@@ -955,3 +955,13 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 	align-items: center;
 }
 /* 2023-08-03 추가 end */
+
+/* 2023-08-07 추가 start */
+.btn_more{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: 84%;right: 0;}
+.cmt_reg_btn {
+	padding: 10px 20px;
+	height: 44px;
+}
+/* 2023-08-07 추가 end */
+
+
