--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -126,6 +126,7 @@
  	var mbr = /*[[${exhibit.mbrSq}]]*/ 'default';
  	var comt = /*[[${exhibit}]]*/ 'default';
  	var otherComt = /*[[${otherComt}]]*/ 'default';
+ 	var showOff = null;
  	
     $(document).ready(function(){
     	setComtDetailInfo();
